--- a/scss/main.css
+++ b/scss/main.css
@@ -1,26 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,500;0,6..12,600;1,6..12,400&family=Poppins:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,500;0,6..12,600;1,6..12,400&family=Poppins:wght@400;500;700&family=Sora:wght@100..800&display=swap");
 html {
   scroll-behavior: smooth;
 }
 
 .btn-link-custom {
-  color: #0F4C75;
-  padding: unset;
+  --h: 2em;
+  line-height: var(--h);
+  color: #333;
+  text-shadow: 0 calc(-1 * var(--_t, 0em)) #A6A6A6, 0 calc(var(--h) - var(--_t, 0em)) #dfdfdf;
+  overflow: hidden;
+  transition: 0.3s;
+  font-size: 18px;
 }
 .btn-link-custom:hover {
-  color: #042032;
-  text-decoration: unset;
+  color: #333;
+  --_t: var(--h);
+}
+
+.img-anim {
+  transition: transform 0.3s ease;
+}
+
+.img-anim:hover {
+  transform: scale(1.1);
 }
 
 .header-bold {
-  font-size: 120px;
+  font-family: "Sora", sans-serif;
+  font-size: 64px;
   font-weight: 600;
-  color: #0F4C75;
+  color: #333;
   outline: none;
+  line-height: normal;
   background-size: contain;
   background-position: top left;
-  -webkit-background-clip: text;
 }
 
 .highlight {
@@ -49,26 +64,33 @@ html {
 }
 
 .ct {
-  font-weight: 500;
-  font-size: 24px;
+  font-weight: 600;
+  font-size: 30px;
   color: #333333;
   letter-spacing: 1.5%;
-  line-height: 34px;
 }
 
 .ct-pm {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 24px;
-  color: #0F4C75;
+  color: #333;
   letter-spacing: 1.5%;
-  line-height: 34px;
+  line-height: normal;
 }
 
 .ct-caption {
   margin-top: 8px;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
-  color: #A6A6A6;
+  color: #333333;
+  font-family: "Sora", sans-serif;
+}
+
+.ct-caption-small {
+  margin-top: 16px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #666666;
 }
 
 .title {
@@ -138,10 +160,48 @@ body {
   scroll-behavior: smooth;
   background-repeat: no-repeat;
   background-position: top center;
+  background-color: #EEF0F1 !important;
 }
 
 .bg-home {
-  background-image: url(/img/Background.svg);
+  background-image: url(/img/bgo1.svg);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -3;
+}
+
+.bg-lg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(/img/bg-lg-only.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: 2;
+}
+
+.bg-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 92%, rgb(238, 240, 241) 100%);
+  z-index: -2;
+}
+
+.btn-hero {
+  position: absolute;
+  z-index: 10;
 }
 
 .wrap-bg {
@@ -298,7 +358,7 @@ body {
 
 #mouse-scroll {
   position: absolute;
-  margin-top: 120px;
+  margin-top: 200px;
   left: 50%;
   -webkit-transform: translateX(-50%);
   z-index: 9999;
@@ -310,8 +370,8 @@ body {
   height: 5px;
   transform: rotate(45deg);
   transform: rotate(45deg);
-  border-right: 2px solid #0F4C75;
-  border-bottom: 2px solid #0F4C75;
+  border-right: 2px solid #333;
+  border-bottom: 2px solid #333;
   margin: 0 0 3px 5px;
 }
 
@@ -320,7 +380,7 @@ body {
   width: 14px;
   border-radius: 10px;
   transform: none;
-  border: 2px solid #0F4C75;
+  border: 2px solid #333;
   top: 170px;
 }
 
@@ -356,7 +416,7 @@ body {
   width: 2px;
   display: block;
   margin: 5px auto;
-  background: #0F4C75;
+  background: #333;
   position: relative;
 }
 
@@ -388,7 +448,7 @@ body {
   color: #666666;
 }
 .navbar a:hover {
-  color: #0F4C75;
+  color: #333;
 }
 .navbar .nav-item {
   margin-left: 2.2em;
@@ -420,15 +480,15 @@ body {
   line-height: 34px;
 }
 .section-1 .rect-icon-linkedin {
-  color: #0F4C75;
+  color: #333;
   border: unset;
   margin-right: 16px;
-  font-size: 32px;
+  font-size: 24px;
   text-decoration: unset;
   text-decoration: none;
   /* From https://css.glass */
-  background: rgba(233, 246, 255, 0.48);
-  border-radius: 16px;
+  background: rgba(230, 230, 230, 0.48);
+  border-radius: 8px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
@@ -436,90 +496,89 @@ body {
   margin-left: 0px;
 }
 .section-1 .rect-icon-linkedin:hover {
-  color: #0F4C75;
+  color: #333;
   border: unset;
   margin-right: 16px;
-  font-size: 32px;
+  font-size: 24px;
   text-decoration: unset;
   text-decoration: none;
   /* From https://css.glass */
-  background: rgba(233, 246, 255, 0.48);
-  border-radius: 16px;
+  background: rgba(230, 230, 230, 0.48);
+  border-radius: 8px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border: 1px solid rgba(233, 246, 255, 0.28);
   color: #0e76a8;
-  background-color: #e6f5ff;
+  background-color: #ffffff;
 }
 .section-1 .rect-icon-wa {
-  color: #0F4C75;
+  color: #333;
   border: unset;
   margin-right: 16px;
-  font-size: 32px;
+  font-size: 24px;
   text-decoration: unset;
   text-decoration: none;
   /* From https://css.glass */
-  background: rgba(233, 246, 255, 0.48);
-  border-radius: 16px;
+  background: rgba(230, 230, 230, 0.48);
+  border-radius: 8px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border: 1px solid rgba(233, 246, 255, 0.28);
 }
 .section-1 .rect-icon-wa:hover {
-  color: #0F4C75;
+  color: #333;
   border: unset;
   margin-right: 16px;
-  font-size: 32px;
+  font-size: 24px;
   text-decoration: unset;
   text-decoration: none;
   /* From https://css.glass */
-  background: rgba(233, 246, 255, 0.48);
-  border-radius: 16px;
+  background: rgba(230, 230, 230, 0.48);
+  border-radius: 8px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border: 1px solid rgba(233, 246, 255, 0.28);
   color: #128c7e;
-  background-color: #e6f5ff;
+  background-color: #ffffff;
 }
 .section-1 .rect-icon-db {
-  color: #0F4C75;
+  color: #333;
   border: unset;
   margin-right: 16px;
-  font-size: 32px;
+  font-size: 24px;
   text-decoration: unset;
   text-decoration: none;
   /* From https://css.glass */
-  background: rgba(233, 246, 255, 0.48);
-  border-radius: 16px;
+  background: rgba(230, 230, 230, 0.48);
+  border-radius: 8px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border: 1px solid rgba(233, 246, 255, 0.28);
 }
 .section-1 .rect-icon-db:hover {
-  color: #0F4C75;
+  color: #333;
   border: unset;
   margin-right: 16px;
-  font-size: 32px;
+  font-size: 24px;
   text-decoration: unset;
   text-decoration: none;
   /* From https://css.glass */
-  background: rgba(233, 246, 255, 0.48);
-  border-radius: 16px;
+  background: rgba(230, 230, 230, 0.48);
+  border-radius: 8px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7px);
   -webkit-backdrop-filter: blur(7px);
   border: 1px solid rgba(233, 246, 255, 0.28);
   color: #ea4c89;
-  background-color: #e6f5ff;
+  background-color: #ffffff;
 }
 
 .sc-card {
-  padding-top: 68px;
-  padding-bottom: 24px;
+  margin-top: 80px;
 }
 
 .card {
@@ -606,6 +665,14 @@ body {
   height: 100px;
 }
 
+.card-case {
+  padding: 48px;
+  padding-bottom: 0px;
+  border-radius: 24px;
+  border: 2px solid #fff;
+  overflow: hidden;
+}
+
 .sc-2 {
   padding-top: 68px;
 }
@@ -622,11 +689,11 @@ body {
   margin-top: 24px;
   font-size: 24px;
   font-weight: 500;
-  color: #0F4C75 !important;
+  color: #333 !important;
   transition: 0.2s ease-in-out 0s;
 }
 .sc-2 .link-action a {
-  color: #0F4C75 !important;
+  color: #333 !important;
 }
 .sc-2 .link-action:hover {
   transform: scale(1.05);
@@ -635,7 +702,7 @@ body {
 
 .sc-3 {
   background-color: #DFFFDE;
-  padding: 84px 0 0 0;
+  padding: 64px 0 0 0;
 }
 
 .sc-4 {
@@ -645,7 +712,7 @@ body {
 }
 
 .explr-1 {
-  background-color: #D4EAFF;
+  background-color: #EEF0F1;
 }
 
 .card-contact {
@@ -654,7 +721,9 @@ body {
 }
 
 footer.footer-area {
-  background-color: #0F4C75;
+  background-color: #EEF0F1;
+  border-top: 1px solid #fff;
+  margin-top: 64px;
 }
 footer.footer-area ul {
   padding: 0;
@@ -676,18 +745,17 @@ footer.footer-area img {
 footer.footer-area p {
   font-size: 16px;
   line-height: 30px;
-  color: #fff;
-  font-weight: 300;
+  color: #333;
 }
 footer.footer-area h4 {
   font-family: Rubik, sans-serif;
   margin: 0;
   font-weight: 400;
   padding: 0;
-  color: #fff;
+  color: #333;
 }
 footer.footer-area a {
-  color: #5867dd;
+  color: #4f4f4f;
 }
 footer.footer-area .no-padding {
   padding: 0 !important;
@@ -697,7 +765,7 @@ footer.footer-area .go_top {
   cursor: pointer;
   width: 40px;
   background: #5867dd;
-  color: #fff;
+  color: #333;
   position: fixed;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -710,16 +778,16 @@ footer.footer-area .go_top span {
   display: inline-block;
 }
 footer.footer-area .footer-big {
-  padding: 105px 0 65px 0;
+  padding: 64px 0 24px 0;
 }
 footer.footer-area .footer-big .footer-widget {
   margin-bottom: 40px;
 }
 footer.footer-area .footer--light {
-  background: #e7e8ed;
+  background: #333;
 }
 footer.footer-area .footer-big .footer-menu ul li a, footer.footer-area .footer-big p, footer.footer-area .footer-big ul li {
-  color: #fff;
+  color: #333;
 }
 footer.footer-area .footer-menu {
   padding-left: 48px;
@@ -730,7 +798,7 @@ footer.footer-area .footer-menu ul li a {
   transition: 0.3s;
 }
 footer.footer-area .footer-menu ul li a:hover {
-  color: #5867dd;
+  color: #666666;
 }
 footer.footer-area .footer-menu--1 {
   width: 100%;
@@ -741,7 +809,7 @@ footer.footer-area .footer-widget-title {
   font-size: 18px;
 }
 footer.footer-area .mini-footer {
-  background: #192027;
+  background: #EEF0F1;
   text-align: center;
   padding: 32px 0;
 }
@@ -749,13 +817,13 @@ footer.footer-area .mini-footer p {
   margin: 0;
   line-height: 26px;
   font-size: 15px;
-  color: #999;
+  color: #666666;
 }
 footer.footer-area .mini-footer p a {
-  color: #fff;
+  color: #333;
 }
 footer.footer-area .mini-footer p a:hover {
-  color: #34bfa3;
+  color: #666666;
 }
 footer.footer-area .widget-about img {
   display: block;
@@ -777,7 +845,7 @@ footer.footer-area .widget-about .contact-details li span {
   padding-right: 12px;
 }
 footer.footer-area .widget-about .contact-details li a {
-  color: #fff;
+  color: #333;
 }
 @media (max-width: 991px) {
   footer.footer-area .footer-menu {
@@ -801,7 +869,7 @@ footer.footer-area .widget-about .contact-details li a {
 }
 @media (max-width: 767.98px) {
   .btn-link-custom {
-    font-size: 14px;
+    font-size: 18px;
   }
   .modal-content {
     width: 100%;
@@ -813,20 +881,28 @@ footer.footer-area .widget-about .contact-details li a {
     margin-bottom: 80px;
   }
   .header-bold {
-    font-size: 80px;
+    font-size: 32px;
   }
   .ct {
     font-weight: 500;
-    font-size: 24px;
+    font-size: 18px;
     color: #333333;
     letter-spacing: 1.5%;
-    line-height: 34px;
+  }
+  .ct-pm {
+    padding-top: 24px;
+    font-size: 16px;
+    line-height: normal;
   }
   .ct-caption {
-    margin-top: 8px;
+    margin-top: 16px;
     font-size: 16px;
     font-weight: 400;
-    color: #A6A6A6;
+    color: #666666;
+  }
+  .ct-caption-small {
+    margin-top: 16px;
+    font-size: 16px;
   }
   .section-1 {
     margin-top: 40px;
@@ -892,6 +968,13 @@ footer.footer-area .widget-about .contact-details li a {
     background-color: #e6f5ff;
     transform: scale(1.2);
   }
+  .ct-caption-small {
+    font-size: 14px;
+  }
+  .hero-padding {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+  }
   .sc-2 {
     padding-top: 24px;
   }
@@ -906,11 +989,11 @@ footer.footer-area .widget-about .contact-details li a {
     margin-top: 24px;
     font-size: 16px;
     font-weight: 500;
-    color: #0F4C75 !important;
+    color: #333 !important;
     transition: 0.2s ease-in-out 0s;
   }
   .sc-2 .link-action a {
-    color: #0F4C75 !important;
+    color: #333 !important;
   }
   .sc-2 .link-action:hover {
     transform: scale(1.05);
@@ -950,7 +1033,11 @@ footer.footer-area .widget-about .contact-details li a {
   .card-img-overlay {
     padding: 1.25rem;
   }
+  .card-case {
+    padding: 24px;
+    padding-bottom: 0px;
+  }
   .sc-3 {
-    padding: 32px 0 0 0;
+    padding: 16px;
   }
 }/*# sourceMappingURL=main.css.map */
